--- a/src/app/div-example/div-example.component.html
+++ b/src/app/div-example/div-example.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="left-column col">Demo Slider</div>
   <div class="center-column col"><mat-slider min="1" max="10000" step="1" [(value)]="sliderNum"></mat-slider></div>
-  <div class="right-column col">Value: {{sliderNum}}</div>
+  <div class="right-column col">People: {{sliderNum}}</div>
 </div>
 
 
